花食微服务代码提交

--- a/huashi-cloud-common/pom.xml
+++ b/huashi-cloud-common/pom.xml
@@ -65,10 +65,10 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 		<!-- 引入 ES 依赖 -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.boot</groupId>-->
+			<!--<artifactId>spring-boot-starter-data-elasticsearch</artifactId>-->
+		<!--</dependency>-->
 
 		<dependency>
 			<groupId>cn.jpush.api</groupId>
@@ -151,10 +151,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 		</dependency>
 
-
-
-
-
+		<!-- 七牛存储的SDK -->
+		<dependency>
+			<groupId>com.qiniu</groupId>
+			<artifactId>qiniu-java-sdk</artifactId>
+			<version>7.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.56</version>
+		</dependency>
 
 
 	</dependencies>
