--- a/huashi-cloud-customer/src/main/resources/application.properties
+++ b/huashi-cloud-customer/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.profiles.active=native
 eureka.client.serviceUrl.defaultZone=${cloud.register.domain}
 logging.path=/opt/cloudlog
 logging.file=/opt/cloudlog/${spring.application.name}.log
-logging.level.root=error
+logging.level.root=info
 
 spring.datasource.url = ${spring.datasource.url}
 spring.datasource.username = ${spring.datasource.username}
@@ -26,9 +26,30 @@ spring.datasource.max-open-prepared-statements = ${spring.datasource.max-open-pr
 #ddl-auto:create-drop----每次程序结束的时候会清空表
 #ddl-auto:update----每次运行程序，没有表格会新建表格，表内有数据不会清空，只会更新
 #ddl-auto:validate----运行程序会校验数据与数据库的字段类型是否相同，不同会报错
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl = true
-spring.jpa.show-sql = false
+spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
 #防止hibernate的映射导致不是驼峰，与数据库的字段不匹配
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+
+#七牛
+#填写自己的参数
+qiniu.accesskey=aTLmh_-BkzEZuRP12TJWY4hIDEzrxoxERcfTKiml
+qiniu.secretkey=21C2hpFlTgSttGIBgeEKNZtngSeM9WywrELweSA1
+qiniu.bucket=huashi-picture
+qiniu.cdns=pa0033s0h.bkt.clouddn.com
+
+#redis配置
+spring.redis.database=0
+spring.redis.host=47.96.108.175
+spring.redis.port=6379
+spring.redis.password=jiabo
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
+spring.redis.timeout=0
+
+
