--- a/huashi-cloud-config/src/main/resources/config/huashi-cloud-customer-dev.properties
+++ b/huashi-cloud-config/src/main/resources/config/huashi-cloud-customer-dev.properties
@@ -1,7 +1,7 @@
 spring.redis.database=0
-spring.redis.host=127.0.0.1
-spring.redis.port=20000
-spring.redis.password=
+spring.redis.host=47.96.108.175
+spring.redis.port=6379
+spring.redis.password=jiabo
 spring.redis.pool.max-active=8
 spring.redis.pool.max-wait=-1
 spring.redis.pool.max-idle=8
