--- a/huashi-cloud-customer/dev.properties
+++ b/huashi-cloud-customer/dev.properties
@@ -2,9 +2,9 @@ cloud.register.domain=http://127.0.0.1:18000/eureka/
 cloud.config.domain=http://127.0.0.1:18001
 cloud.profile=dev
 
-spring.datasource.url = jdbc:mysql://localhost:3306/hs?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;autoReconnect=true
+spring.datasource.url = jdbc:mysql://47.96.108.175:3307/hs?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;autoReconnect=true
 spring.datasource.username = root
-spring.datasource.password = 123456
+spring.datasource.password = root
 spring.datasource.poolName = SpringBootHikariCP
 spring.datasource.maximumPoolSize = 5
 spring.datasource.minimumIdle = 3
