--- a/huashi-cloud-customer/src/main/resources/bootstrap.properties
+++ b/huashi-cloud-customer/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
 #如果服务无法连接到配置服务器，启动服务失败
-spring.cloud.config.failFast=true
+spring.cloud.config.failFast=false
 #配置服务中心的地址
 spring.cloud.config.uri=${cloud.config.domain}
 #对应前配置文件中的{profile}部分
