整合spring cloud等负载均衡，增加pc管理后台代码逻辑

--- a/huashi-cloud-common/pom.xml
+++ b/huashi-cloud-common/pom.xml
@@ -150,6 +150,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 		</dependency>
+		<!-- 获取网关服务 -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zuul</artifactId>
+		</dependency>
 
 		<!-- 七牛存储的SDK -->
 		<dependency>
