--- a/huashi-cloud-customer/dev.properties
+++ b/huashi-cloud-customer/dev.properties
@@ -2,7 +2,7 @@ cloud.register.domain=http://127.0.0.1:18000/eureka/
 cloud.config.domain=http://127.0.0.1:18001
 cloud.profile=dev
 
-spring.datasource.url = jdbc:mysql://47.96.108.175:3307/hs?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;autoReconnect=true
+spring.datasource.url = jdbc:mysql://47.96.108.175:3307/hs?useUnicode=true&autoReconnect=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useServerPrepStmts=false
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.poolName = SpringBootHikariCP
