--- a/huashi-cloud-register/pom.xml
+++ b/huashi-cloud-register/pom.xml
@@ -23,5 +23,26 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>com.huashi.cloud.register.ApplicationHuaShiCloudRegister</mainClass>
+					<executable>true</executable>
+					<fork>true</fork> <!-- 如果没有该配置，devtools不会生效 -->
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 
 </project>
