--- a/huashi-cloud-customer/src/main/resources/application.properties
+++ b/huashi-cloud-customer/src/main/resources/application.properties
@@ -52,7 +52,7 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
 spring.redis.timeout=0
 
-#################################  传统网关配置  start ################
+#################################  （没有引用eureka下网关的配置）传统网关配置  start ################
 # 所谓的传统路由配置方式就是在不依赖于服务发现机制的情况下，通过在配置文件
 # 中具体指定每个路由表达式与服务实例的映射关系来实现API网关对外部请求的路由
 
@@ -67,11 +67,43 @@ spring.redis.timeout=0
 #huashi-cloud-customer.ribbon.listOfServers=http://localhost:8080/,http://localhost:8081/
 #################################  传统网关配置  end ################
 
-#################################  服务路由配置  start ################
+
+
+#################################  （没有引用eureka下网关的配置）服务路由配置  start ################
 #服务路由我们在上一篇中也已经有过基础的介绍和体验，Spring Cloud Zuul通过与Spring Cloud Eureka的整合，
 # 实现了对服务实例的自动化维护，所以在使用服务路由配置的时候，我们不需要向传统路由配置方式那样为serviceId去指定具体的服务实例地址，
 # 只需要通过一组zuul.routes.<route>.path与zuul.routes.<route>.serviceId参数对的方式配置即可。
-zuul.routes.huashi-cloud-customer.path=/huashi-cloud-customer/**
-zuul.routes.huashi-cloud-customer.serviceId=huashi-cloud-customer
+#zuul.routes.huashi-cloud-customer.path=/huashi-cloud-customer/**
+#zuul.routes.huashi-cloud-customer.serviceId=huashi-cloud-customer
 #应该是hystrix也有超时限制，hystrix的默认超时时间是1秒，修改其默认超时时间
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
+#################################  服务路由配置  end ################
+
+
+
+#应用消息队列
+spring.rabbitmq.host=47.96.108.175
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=jiabo
+spring.rabbitmq.virtual-host=/
+
+logging.level.org.springframework.amqp=ERROR
+logging.level.com.patterncat=INFO
+
+#spring.rabbitmq.dynamic 是否创建AmqpAdmin bean. 默认为: true
+#spring.rabbitmq.listener.acknowledge-mode 指定Acknowledge的模式.
+#spring.rabbitmq.listener.auto-startup 是否在启动时就启动mq，默认: true
+#spring.rabbitmq.listener.concurrency 指定最小的消费者数量.
+#spring.rabbitmq.listener.max-concurrency 指定最大的消费者数量.
+#spring.rabbitmq.listener.prefetch 指定一个请求能处理多少个消息，如果有事务的话，必须大于等于transaction数量.
+#spring.rabbitmq.listener.transaction-size 指定一个事务处理的消息数量，最好是小于等于prefetch的数量.
+#spring.rabbitmq.requested-heartbeat 指定心跳超时，0为不指定.
+#spring.rabbitmq.ssl.enabled 是否开始SSL，默认: false
+#spring.rabbitmq.ssl.key-store 指定持有SSL certificate的key store的路径
+#spring.rabbitmq.ssl.key-store-password 指定访问key store的密码.
+#spring.rabbitmq.ssl.trust-store 指定持有SSL certificates的Trust store.
+#spring.rabbitmq.ssl.trust-store-password 指定访问trust store的密码.
+
+
+management.security.enabled=false
