--- a/huashi-cloud-customer/src/main/resources/bootstrap.properties
+++ b/huashi-cloud-customer/src/main/resources/bootstrap.properties
@@ -1,10 +1,9 @@
-#如果服务无法连接到配置服务器，启动服务失败
-spring.cloud.config.failFast=false
-#配置服务中心的地址
-spring.cloud.config.uri=${cloud.config.domain}
+eureka.client.serviceUrl.defaultZone=${cloud.register.domain}
+#开启通过服务来访问Config Server的功能
+spring.cloud.config.discovery.enabled=true
+#指定Config Server注册的服务名
+spring.cloud.config.discovery.serviceId=huashi-cloud-config
 #对应前配置文件中的{profile}部分
 spring.cloud.config.profile=${cloud.profile}
-#对应前配置文件的分支
-spring.cloud.config.label=master
 #对应前配置文件中的{application}部分
 spring.cloud.config.name=huashi-cloud-customer
