--- a/huashi-cloud-tool/product.properties
+++ b/huashi-cloud-tool/product.properties
@@ -1,10 +1,10 @@
 cloud.register.domain=http://127.0.0.1:18000/eureka/
 cloud.config.domain=http://127.0.0.1:18001
-cloud.profile=dev
+cloud.profile=prod
 
-spring.datasource.url = jdbc:mysql://47.96.108.175:3307/hs?useUnicode=true&autoReconnect=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useServerPrepStmts=false
+spring.datasource.url = jdbc:mysql://localhost:3306/hs?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;autoReconnect=true
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = 123456
 spring.datasource.poolName = SpringBootHikariCP
 spring.datasource.maximumPoolSize = 5
 spring.datasource.minimumIdle = 3
