--- a/huashi-cloud-way/pom.xml
+++ b/huashi-cloud-way/pom.xml
@@ -8,46 +8,26 @@
 		<version>${project.release.version}</version>
 	</parent>
 
-	<artifactId>huashi-cloud-tool</artifactId>
+	<artifactId>huashi-cloud-way</artifactId>
 	<packaging>jar</packaging>
 
 	<properties>
-		<start-class>com.huashi.cloud.tool.ApplicationHuaShiCloudTool</start-class>
+		<start-class>com.huashi.cloud.way.ApplicationHuaShiCloudTool</start-class>
 	</properties>
 
 
 	<dependencies>
 		<dependency>
-			<groupId>com.huashi.cloud</groupId>
-			<artifactId>huashi-cloud-common</artifactId>
-			<version>${project.release.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-log4j12</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-config</artifactId>
-		</dependency>
-
-		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
+
+		<!-- 获取网关服务 -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-test</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zuul</artifactId>
 		</dependency>
 
-		<!--刷线配置文件信息-->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
 	</dependencies>
 
 
@@ -64,7 +44,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>com.huashi.cloud.tool.ApplicationHuaShiCloudTool</mainClass>
+					<mainClass>com.huashi.cloud.way.ApplicationHuaShiCloudWay</mainClass>
 					<executable>true</executable>
 					<fork>true</fork> <!-- 如果没有该配置，devtools不会生效 -->
 				</configuration>
