--- a/huashi-cloud-customer/pom.xml
+++ b/huashi-cloud-customer/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>huashi-cloud</artifactId>
 		<groupId>com.huashi.cloud</groupId>
-		<version>${project.release.version}</version>
+		<version>0.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>huashi-cloud-customer</artifactId>
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>com.huashi.cloud</groupId>
 			<artifactId>huashi-cloud-common</artifactId>
-			<version>${project.release.version}</version>
+			<version>0.1-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
