--- a/huashi-cloud-way/pom.xml
+++ b/huashi-cloud-way/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>huashi-cloud</artifactId>
 		<groupId>com.huashi.cloud</groupId>
-		<version>${project.release.version}</version>
+		<version>0.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>huashi-cloud-way</artifactId>
