--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,17 @@
 	<groupId>com.huashi.cloud</groupId>
 	<artifactId>huashi-cloud</artifactId>
 	<packaging>pom</packaging>
-	<version>${project.release.version}</version>
+	<version>0.1-SNAPSHOT</version>
 
 	<properties>
 		<java.version>1.8</java.version>
-		<project.release.version>0.1-SNAPSHOT</project.release.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 
 
+	<!--发布项目配置-->
 	<distributionManagement>
 		<repository>
 			<id>releases</id>
