--- a/huashi-cloud-customer/product.properties
+++ b/huashi-cloud-customer/product.properties
@@ -1,7 +1,7 @@
 cloud.register.domain=http://172.18.52.98:18000/eureka/
 cloud.profile=prod
 
-spring.datasource.url = jdbc:mysql://localhost:3306/hs?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;autoReconnect=true
+spring.datasource.url = jdbc:mysql://47.96.108.175:3307/hs?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;autoReconnect=true
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.poolName = SpringBootHikariCP
