--- a/huashi-cloud-customer/product.properties
+++ b/huashi-cloud-customer/product.properties
@@ -3,9 +3,9 @@ cloud.profile=prod
 
 spring.datasource.url = jdbc:mysql://47.96.108.175:3307/hs?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;autoReconnect=true
 spring.datasource.username = root
-spring.datasource.password = 123456
+spring.datasource.password = root
 spring.datasource.poolName = SpringBootHikariCP
-spring.datasource.maximumPoolSize = 5
+spring.datasource.maximumPoolSize = 50
 spring.datasource.minimumIdle = 3
 spring.datasource.maxLifetime =2000000
 spring.datasource.connectionTimeout = 30000
